# WindowsDeveloperConfig

./: README.md
.github/workflows/: ci.yml
.pipelines/: OneBranch.SignAndPackage.yml
Workloads/_common/: apply-configuration.ps1  assert-winget-configure.ps1  enable-winget-configure.ps1  invoke-retry.ps1  preflight.ps1  refresh-path.ps1
Workloads/dotnet/: configuration.winget  install.ps1
Workloads/go/: install.ps1
Workloads/java/: configuration.winget  install.ps1
Workloads/php/: configuration.winget  install.ps1
Workloads/python/: install.ps1
Workloads/rust/: configuration.winget  install.ps1
Workloads/typescript/: configuration.winget  install.ps1
Workloads/winforms/: configuration.winget  install.ps1
Workloads/winui/: configuration.winget  install.ps1
src/: manifest.yml
src/Workloads/_common/: assert-winget-configure.ps1  enable-winget-configure.ps1  invoke-retry.ps1  preflight.ps1  refresh-path.ps1
src/Workloads/go/: configuration.winget  install.ps1
src/Workloads/java/: install.ps1
src/Workloads/php/: install.ps1
src/Workloads/python/: configuration.winget
src/Workloads/rust/: configuration.winget
src/Workloads/typescript/: install.ps1
src/Workloads/winui/: configuration.winget
src/docs/: development.md
src/future/cmdpal/: README.md
src/tests/_harness/: run-flow.ps1  run-server.ps1
src/tests/rust/: Cargo.toml
src/tests/rust/src/: main.rs
src/windows-dev-config/: README.md  dev-config.winget
src/wsl-comfort/: install.ps1
windows-dev-config/: README.md  dev-config.winget
wsl-comfort/: install.ps1
(+36 files in other folders)
